# cookiecutter-uv

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
templates/fastapi/: cookiecutter.json
templates/fastapi/{{cookiecutter.project_name}}/: .gitignore  Dockerfile  README.md  docker-compose.tests.yaml  tests.Dockerfile
templates/fastapi/{{cookiecutter.project_name}}/.github/workflows/: test.yaml
templates/fastapi/{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: alembic.ini  conf.py
templates/flet/: cookiecutter.json
templates/flet/{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Dockerfile  docker-compose.dev.yaml  pyproject.toml  settings.yml  tests.Dockerfile
templates/flet/{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json
templates/flet/{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: main.py
templates/flet/{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/src/: database.py  settings.py
templates/flet/{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/src/layouts/: base.py
templates/flet/{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/src/views/: index.py
{{cookiecutter.project_name}}/: Dockerfile  docker-compose.dev.yaml  pyproject.toml
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_name}}/.github/workflows/: main.yml
{{cookiecutter.project_name}}/infra/: functions.tf
{{cookiecutter.project_name}}/tests/: conftest.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: .env.example  main.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/src/: __init__.py  deps.py  settings.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/src/api/: __init__.py
